# ShaderCrossCompiler

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  tokenizer.h
examples/: examplefragment.glsl  examplevertex.glsl
shaders/: example1.shader
